--- a/app/src/main/res/layout/activity_create_view.xml
+++ b/app/src/main/res/layout/activity_create_view.xml
@@ -4,50 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CreateView"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".CreateView">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="16dp"
-        >
+        android:padding="16sp">
 
         <ImageButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            android:src="@drawable/topbarbutton"
-            android:background="@null"/>
+            android:background="@null"
+            android:src="@drawable/topbarbutton" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="1"
+            android:gravity="center"
             android:text="@string/create"
             android:textColor="@color/black"
-            android:textSize="24dp"
-            android:textStyle="bold"
-            android:layout_gravity="center"
-            android:gravity="center"
-            >
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
-
-        </TextView>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="3"
             android:clickable="true"
-            android:text="완료"
-            android:textSize="12dp"
-            android:textColor="@color/black"
-            android:layout_gravity="center"
+            android:focusable="true"
             android:gravity="center"
-
-            >
-        </TextView>
+            android:text="@string/submit"
+            android:textColor="@color/black"
+            android:textSize="12sp" />
 
     </LinearLayout>
 
@@ -55,31 +49,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp"
-        >
+        android:padding="16sp">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="내용"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="20dp"
             android:clickable="false"
-            android:padding="8dp"
-            >
-
-        </TextView>
+            android:padding="8sp"
+            android:text="@string/context"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <ImageButton
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/input_field"
             android:background="@null"
-            android:padding="8dp"
-            >
-
-        </ImageButton>
+            android:padding="8sp"
+            android:src="@drawable/input_field" />
 
     </LinearLayout>
 
@@ -87,42 +74,38 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp"
-        >
+        android:padding="16sp">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="날짜&amp;시간"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="20dp"
             android:clickable="false"
             android:padding="8dp"
-            >
-        </TextView>
+            android:text="@string/dateAndHour"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            >
-            <ImageButton
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:src="@drawable/select_date_button"
-                android:background="@null"
-                android:padding="8dp"/>
-
+            android:orientation="horizontal">
 
             <ImageButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:src="@drawable/select_hour_button"
                 android:background="@null"
-                android:padding="8dp"/>
+                android:padding="8dp"
+                android:src="@drawable/select_date_button" />
+
+            <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@null"
+                android:padding="8dp"
+                android:src="@drawable/select_hour_button" />
         </LinearLayout>
     </LinearLayout>
 
@@ -130,58 +113,49 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp"
-        >
+        android:padding="16dp">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="장소"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="20dp"
             android:clickable="false"
             android:padding="8dp"
-            >
-        </TextView>
+            android:text="@string/place"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
 
             <RadioButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:src="@drawable/select_hour_button"
                 android:background="@null"
-                android:padding="8dp"
-                android:text="이 장소를 떠날때"
-                android:textSize="15dp"
-                android:textColor="@color/black"
                 android:layoutDirection="rtl"
+                android:padding="8dp"
+                android:src="@drawable/select_hour_button"
+                android:text="@string/departPlace"
                 android:textAlignment="center"
-                >
-
-            </RadioButton>
+                android:textColor="@color/black"
+                android:textSize="15sp" />
 
             <RadioButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:src="@drawable/select_hour_button"
                 android:background="@null"
-                android:padding="8dp"
-                android:text="이 장소에 왔을때"
-                android:textSize="15dp"
-                android:textColor="@color/black"
                 android:layoutDirection="rtl"
+                android:padding="8dp"
+                android:src="@drawable/select_hour_button"
+                android:text="@string/arrivePlace"
                 android:textAlignment="center"
-                >
+                android:textColor="@color/black"
+                android:textSize="15sp" />
 
-            </RadioButton>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
