--- a/app/src/main/res/layout/activity_today_view.xml
+++ b/app/src/main/res/layout/activity_today_view.xml
@@ -5,39 +5,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TodayView"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".TodayView">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="16dp"
-        >
+        android:padding="16sp">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Today"
-            android:textColor="@color/black"
-            android:textSize="24dp"
-            android:textStyle="bold"
             android:layout_gravity="center"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="15dp"
-            />
+            android:layout_marginStart="15sp"
+            android:layout_marginTop="5sp"
+            android:layout_weight="1"
+            android:text="@string/todayTitle"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <ImageButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="5"
-            android:clickable="true"
-            android:src="@drawable/ic_baseline_add_24"
             android:layout_gravity="center"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="5sp"
+            android:layout_weight="5"
             android:background="@null"
-            />
+            android:clickable="true"
+            android:focusable="true"
+            android:src="@drawable/ic_baseline_add_24" />
 
     </LinearLayout>
 
@@ -45,21 +43,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingHorizontal="16dp"
-        >
+        android:paddingHorizontal="16sp">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/recycler1"
-            android:scrollbars="vertical"
-            android:paddingHorizontal="16dp"
-            >
-
-        </androidx.recyclerview.widget.RecyclerView>
+            android:paddingHorizontal="16sp"
+            android:scrollbars="vertical" />
 
     </LinearLayout>
-
-
-
 </LinearLayout>
