--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -4,17 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <CheckBox android:id="@+id/to_do_list"
+    <CheckBox
+        android:id="@+id/to_do_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:focusable="false"
         android:clickable="true"
+        android:focusable="false"
+        android:paddingTop="16sp"
+        android:paddingBottom="16sp"
         android:textColor="@color/black"
-        android:textSize="15dp"
-        android:paddingTop="16dp"
-        android:paddingBottom="16dp"
-        tools:ignore="MissingConstraints"
-        >
-    </CheckBox>
+        android:textSize="15sp"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
