--- a/app/src/main/res/layout/activity_today_view.xml
+++ b/app/src/main/res/layout/activity_today_view.xml
@@ -27,6 +27,7 @@
             android:textStyle="bold" />
 
         <ImageButton
+            android:id="@+id/create_todo_list_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
