feat : create-view의 < 버튼 클릭 시, today-view로 돌아가기

--- a/app/src/main/res/layout/activity_create_view.xml
+++ b/app/src/main/res/layout/activity_create_view.xml
@@ -14,11 +14,14 @@
         android:padding="16sp">
 
         <ImageButton
+            android:id="@+id/backward_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="3"
+            android:clickable="true"
             android:background="@null"
-            android:src="@drawable/topbarbutton" />
+            android:src="@drawable/topbarbutton"
+            android:focusable="true" />
 
         <TextView
             android:layout_width="match_parent"
