--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -4,6 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <LinearLayout
+        android:id="@+id/recycler_view_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:longClickable="true">
+
     <CheckBox
         android:id="@+id/to_do_list"
         android:layout_width="match_parent"
@@ -15,5 +21,7 @@
         android:textColor="@color/black"
         android:textSize="15sp"
         tools:ignore="MissingConstraints" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
