--- a/app/src/main/res/layout/activity_recycler_view_item.xml
+++ b/app/src/main/res/layout/activity_recycler_view_item.xml
@@ -4,12 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:id="@+id/recycler_view_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:longClickable="true">
-
     <CheckBox
         android:id="@+id/to_do_list"
         android:layout_width="match_parent"
@@ -23,8 +17,7 @@
         android:buttonTint="@color/black"
         android:textColor="@color/black"
         android:textSize="15sp"
+        android:longClickable="true"
         tools:ignore="MissingConstraints" />
-
-    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
