--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".view.create.CreateView">
+    tools:context=".view.create.CreateActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
