--- a/app/src/main/res/layout/activity_today.xml
+++ b/app/src/main/res/layout/activity_today.xml
@@ -56,7 +56,7 @@
             android:orientation="vertical">
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler1"
+                android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scrollbars="vertical" />
