--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -167,8 +167,18 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="30dp"
                     android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/select_information"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="30dp"
+                        android:textColor="@color/black"
+                        android:text="create information"
+                        android:textSize="15dp"
+                        tools:text="create information" />
 
                 </LinearLayout>
 
