--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -56,8 +56,10 @@
                 android:background="@null"
                 android:gravity="center"
                 android:text="@string/submit"
+                android:clickable="true"
                 android:textColor="@color/black"
-                android:textSize="12dp" />
+                android:textSize="12dp"
+                android:focusable="true" />
 
         </LinearLayout>
 
@@ -80,6 +82,7 @@
             <com.yourssu.design.system.atom.SimpleTextField
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:hint="@string/fill_this_text_field"
                 android:id="@+id/content" />
 
         </LinearLayout>
